# agent-auth-conformance-kit

./: .gitignore  LICENSE  NOTICE  PUBLISH_INSTRUCTIONS.md  README.md  README.zh-CN.md  publish_to_github.bat  pyproject.toml
.github/workflows/: conformance.yml
aacp/: __init__.py  ledger.py  model.py  reference_pea.py  report.py  runner.py  sut.py
aacp/conformance/: __init__.py  base.py  test_ap1_confinement.py  test_ap2_envelope.py  test_ap3_irreversible.py  test_ap4_human.py  test_ap5_audit.py  test_ap6_failsafe.py
docs/: AACP_v0.1.md
examples/: insecure_sut.py  run_reference.py
reports/: L2_report.json  L2_report.md
tests/: test_negative_control.py  test_reference_conformance.py
