[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-auth-conformance-kit"
version = "0.1.0"
description = "Runnable conformance suite for the Agent Authorization Conformance Profile (AACP v0.1)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "AIEGIS" }]
keywords = ["agent", "authorization", "conformance", "governance", "audit", "ai-safety"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
aacp-run-reference = "examples.run_reference:main"

[tool.setuptools]
packages = ["aacp", "aacp.conformance"]
